storage/xtradb/buf/buf0buf.cc
@@ -5859,6 +5859,10 @@ buf_page_encrypt_before_write(
 	fil_space_crypt_t* crypt_data = fil_space_get_crypt_data(space_id);
 	bpage->real_size = UNIV_PAGE_SIZE;
 
+#ifdef UNIV_DEBUG
+	fil_page_type_validate(src_frame);
+#endif
+
 	if (crypt_data != NULL && crypt_data->encryption == FIL_SPACE_ENCRYPTION_OFF) {
 		/* Encryption is disabled */
 		return const_cast<byte*>(src_frame);
@@ -5912,6 +5916,11 @@ buf_page_encrypt_before_write(
 		ut_ad(key_version == 0 || key_version >= bpage->key_version);
 		bpage->key_version = key_version;
 		bpage->real_size = page_size;
+
+#ifdef UNIV_DEBUG
+		fil_page_type_validate(dst_frame);
+#endif
+
 	} else {
 		/* First we compress the page content */
 		ulint out_len = 0;
@@ -5933,6 +5942,10 @@ buf_page_encrypt_before_write(
 
 		bpage->real_size = out_len;
 
+#ifdef UNIV_DEBUG
+		fil_page_type_validate(tmp);
+#endif
+
 		/* And then we encrypt the page content */
 		fil_space_encrypt(bpage->space,
 				bpage->offset,
@@ -5941,6 +5954,10 @@ buf_page_encrypt_before_write(
 				zip_size,
 				dst_frame);
 	}
+
+#ifdef UNIV_DEBUG
+	fil_page_type_validate(dst_frame);
+#endif
 
 	// return dst_frame which will be written
 	return dst_frame;
@@ -5977,6 +5994,10 @@ buf_page_decrypt_after_read(
 			/* Find free slot from temporary memory array */
 			buf_tmp_buffer_t* slot = buf_pool_reserve_tmp_slot(buf_pool, page_compressed);
 
+#ifdef UNIV_DEBUG
+			fil_page_type_validate(dst_frame);
+#endif
+
 			fil_decompress_page(slot->comp_buf,
 					dst_frame,
 					size,
@@ -5985,10 +6006,19 @@ buf_page_decrypt_after_read(
 			/* Mark this slot as free */
 			slot->reserved = false;
  		}
+
+#ifdef UNIV_DEBUG
+		fil_page_type_validate(dst_frame);
+#endif
 	} else {
 		/* Find free slot from temporary memory array */
 		buf_tmp_buffer_t* slot = buf_pool_reserve_tmp_slot(buf_pool, page_compressed);
 		memcpy(slot->crypt_buf, dst_frame, size);
+
+#ifdef UNIV_DEBUG
+		fil_page_type_validate(dst_frame);
+		fil_page_type_validate(slot->crypt_buf);
+#endif
 
 		/* decrypt from crypt_buf to dst_frame */
  		fil_space_decrypt(bpage->space,
@@ -5996,11 +6026,20 @@ buf_page_decrypt_after_read(
 				  size,
 				  dst_frame);
 
+#ifdef UNIV_DEBUG
+		fil_page_type_validate(dst_frame);
+		fil_page_type_validate(slot->crypt_buf);
+#endif
+
 		if (page_compressed) {
 			fil_decompress_page(slot->comp_buf,
 					dst_frame,
 					size,
 					&bpage->write_size);
+
+#ifdef UNIV_DEBUG
+		fil_page_type_validate(dst_frame);
+#endif
  		}
 
 		/* Mark this slot as free */
