storage/xtradb/include/fil0crypt.h
@@ -118,7 +118,10 @@ fil_space_crypt_cleanup();
 Create crypt data, i.e data that is used for a single tablespace */
 UNIV_INTERN
 fil_space_crypt_t *
-fil_space_create_crypt_data(uint key_id);
+fil_space_create_crypt_data(
+/*========================*/
+	fil_encryption_t	encrypt_mode,	/*!< in: encryption mode */
+	uint			key_id);	/*!< in: encryption key id */
 
 /*********************************************************************
 Destroy crypt data */
